Removed svg files from document, fixed spacing between fixed header and next section.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -5,9 +5,13 @@
  * Copyright (c) 2017. by Way2CU, http://way2cu.com
  * Authors: Iliya Melishev
  */
+
+body {
+	padding-top: 4rem;
+}
+
 section#footer,
 section#header {
-	margin-top: 73px;
 	background: url(../images/header.svg), linear-gradient(180deg, #8cc0e8, @color_white);
 	background-size: 1920px 1058px;
 	background-position: center bottom;
